bdr.BDR.scala.error
Erreur de compilation :
BDR:4: error: '=' expected but ';' found.
  if(x="R"){
^