bdr.BDR.scala.code
var fini=false
while(fini==false){
  var x==litMessage()
  if(x="R"){
    droite();avance()
  }
  else if(x=="L"){
    gauche();avance()
  }
  else if(x=="I"){
    retourne();avance() 
  }
  else if(x=="A"){
    avance()
  }
  else if(x=="B"){
    avance(2)
  }
  else if(x=="C"){
    avance(3)
  }
  else if(x=="Z"){
    recule()
  }
  else if(x=="Y"){
    recule(2)
  }
  else if(x=="X"){
    recule(3)
  }
  else if(x==""){
    fini=true
  }
  
}
